# agent-mux

./: .gitignore  Cargo.toml  README.md  main.go
internal/agent/: persist.go  reconcile.go  reconcile_test.go  session.go  tmux.go  watch.go
internal/claude/: history.go  session.go  tmux.go
internal/provider/: claude.go  codex.go  gemini.go  opencode.go  provider.go
internal/tui/: model.go  style.go  tree.go
src/: main.rs  tui.rs
src/agent/: git.rs  ipc.rs  mod.rs  persist.rs  provider.rs  reconcile.rs  status.rs  tmux.rs  watch.rs
